- Improved mobile experience by adding more screen size checks and adding overflow scrolling behaviours. - Fixed references in typescript library readme.

--- a/site/styles.css
+++ b/site/styles.css
@@ -343,6 +343,13 @@ body {
     }
 }
 
+@media (max-width: 500px) {
+    #siteTitle {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
 .cvss-creation-utils-container {
     justify-content: space-between;
 }
